style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,100;1,300&display=swap');


body {
    font-family: 'Roboto', sans-serif;
    background-color:rgb(174, 225, 255);
    display: flex;
    flex-flow: column;
    align-items: center;
    height: 100vh;
    margin: 0;
}

.hidden {
    display: none !important;
    opacity: 0;
}

.soft-hidden {
    visibility: hidden;
    opacity: 0;
}

.transition {
    transition: all 1.5s;
}

.header {
    text-align: center;
    font-size: 45px;
    font-weight: 500;
    color: rgba(255, 255, 255, 0.89);
}

.header-container {
    background-color:rgb(29, 100, 141);
    width: 100%;
    margin-bottom: 20px;
}

.launch {
    background-color: rgb(226, 245, 255);
    border-width: 0.5px;
    border-radius: 5px;
    font-weight: bold;
    font-size: 20px;
    margin-top: 10%;
    display: block;
    justify-content: center;
    align-items: center;
    width: 180px;
    height: 80px;
    flex-shrink: 0;
    font-size: 25px;
}

.launch:hover {
    background-color: rgb(210, 228, 238);
    cursor: pointer;
}

.game-container {
    display: flex;
    flex-flow: column;
    align-items: center;
    margin-top: 20px;
    width: 40%;
    flex-shrink: 1;
}

.output {
    display: flex;
    justify-content: space-between;
    margin-bottom: 65px;
    width: 100%;
}

.output-text {
    margin-bottom: 30px;
    font-size: 22px;
    font-weight: 400;
}

.player-choice, .computer-choice {
    display: flex;
    flex-flow: column;
    flex: 1;
    text-align: center;
    align-items: center;
    max-width: 200px;
}

.choice-emoji {
    font-size: 100px;
    color: rgb(99, 99, 99);
}

.choice-text {
    font-size: 35px;
}

.output div {
    gap: 10px;
}

.button-desc {
    font-size: 25px;
    text-align: center;
}

.game-buttons {
    display: flex;
    justify-content: space-around;
    width: 100%;
    margin-top: 30px;
    gap: 20px;
}

.game-buttons button {
    background-color: rgb(226, 245, 255);
    border-style: none;
    border-radius: 8px;
    width: 150px;
    height: 125px;
}

.game-buttons button:hover {
    background-color: rgb(210, 228, 238);
    cursor: pointer;
}

.game-buttons button div {
    text-align: center;
    font-size: 80px;
}

.bold-buttonDesc {
    font-weight: bold;
    font-size: 31px;
}

.restart {
    background-color: rgb(226, 245, 255);
    border-width: 0.5px;
    border-radius: 5px;
    font-weight: bold;
    font-size: 20px;
    width: 135px;
    height: 60px;
    flex-shrink: 0;
    font-size: 22px;
    margin-top: 30px;
}

.restart:hover {
    background-color: rgb(210, 228, 238);
    cursor: pointer;
}

